[metadata]
name = minestat 
version = 2.4.0
author = Lloyd Dilley and Felix Ern (MindSolve)
author_email = minecraft@frag.land
description = A Minecraft server status checker
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FragLand/minestat
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Games/Entertainment
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Networking :: Monitoring
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.6
